# bday

./: .gitignore  AGENTS.md  Bday.fsproj  Program.fs  README.md  pyproject.toml
src/bday/: __init__.py  cli.py  contact.py  io.py  pipeline.py
tests/: test_cli.py  test_contact.py  test_io.py  test_pipeline.py
