[project]
name = "bday"
version = "0.1.0"
description = "CLI tool that normalizes contact spreadsheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
]

[project.scripts]
bday = "bday.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
