[project]
name = "bday"
version = "0.1.0"
description = "CLI tool that normalizes contact spreadsheets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1.2",
    "pandas>=2.0.0",
    "xlrd>=2.0.1",
]

[project.scripts]
bday = "bday.cli:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.2.250926",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
